occlang5/y.output
State 84 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 226 conflicts: 1 shift/reduce
State 310 conflicts: 1 shift/reduce
State 330 conflicts: 2 reduce/reduce
State 350 conflicts: 1 shift/reduce
State 406 conflicts: 1 shift/reduce
State 509 conflicts: 2 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: block_definition_list

    2 block_definition_list: block_definition
    3                      | block_definition_list block_definition

    4 alternation: ALT NEWLINE RIND alternative_vlist ROUTD
    5            | ALT NEWLINE
    6            | ALT replicator NEWLINE RIND alternative ROUTD
    7            | PRI ALT NEWLINE RIND alternative_vlist ROUTD
    8            | PRI ALT NEWLINE
    9            | PRI ALT replicator NEWLINE RIND alternative ROUTD

   10 alternative: guarded_alternative
   11            | alternation
   12            | specification alternative
   13            | channel '?' CASE NEWLINE RIND variant_vlist ROUTD
   14            | channel '?' CASE NEWLINE
   15            | boolean '&' channel '?' CASE NEWLINE RIND variant_vlist ROUTD
   16            | boolean '&' channel '?' CASE NEWLINE

   17 alternative_vlist: alternative
   18                  | alternative_vlist alternative

   19 block_definition: PROC name '(' formal_olist ')' NEWLINE RIND procedure_body ROUTD ':' NEWLINE
   20                 | data_type_clist FUNCTION name '(' formal_olist ')' NEWLINE RIND function_body ROUTD ':' NEWLINE

   21 case_input: channel '?' CASE NEWLINE RIND variant_vlist ROUTD
   22           | channel '?' CASE NEWLINE

   23 choice: guarded_choice
   24       | conditional
   25       | specification choice

   26 choice_vlist: choice
   27             | choice_vlist choice

   28 conditional: IF NEWLINE RIND choice_vlist ROUTD
   29            | IF NEWLINE
   30            | IF replicator NEWLINE RIND choice ROUTD

   31 construction: sequence
   32             | conditional
   33             | selection
   34             | loop
   35             | parallel
   36             | alternation

   37 definition: PROTOCOL name IS sequential_protocol ':' NEWLINE
   38           | PROTOCOL name NEWLINE RIND CASE NEWLINE RIND tagged_protocol_vlist ROUTD ROUTD ':' NEWLINE
   39           | PROTOCOL name NEWLINE RIND CASE NEWLINE ROUTD ':' NEWLINE
   40           | ANY FUNCTION name '(' ')' NEWLINE RIND function_body ROUTD ':' NEWLINE
   41           | data_type_clist FUNCTION name '(' formal_olist ')' IS expression_list ':' NEWLINE
   42           | specifier name RETYPES element ':' NEWLINE
   43           | VAL specifier name RETYPES expression ':' NEWLINE
   44           | block_definition

   45 function_body: value_process

   46 guarded_alternative: guard RIND process ROUTD

   47 guarded_choice: boolean NEWLINE RIND process ROUTD

   48 loop: WHILE boolean NEWLINE RIND process ROUTD

   49 option: case_expression_clist NEWLINE RIND process ROUTD
   50       | ELSE NEWLINE RIND process ROUTD
   51       | specification option

   52 option_vlist: option
   53             | option_vlist option

   54 parallel: PAR NEWLINE RIND process_vlist ROUTD
   55         | PAR NEWLINE
   56         | PAR replicator NEWLINE RIND process ROUTD
   57         | PRI PAR NEWLINE RIND process_vlist ROUTD
   58         | PRI PAR NEWLINE
   59         | PRI PAR replicator NEWLINE RIND process ROUTD
   60         | placedpar

   61 placedpar: PLACED PAR NEWLINE RIND placedpar_vlist ROUTD
   62          | PLACED PAR NEWLINE
   63          | PLACED PAR replicator NEWLINE RIND placedpar ROUTD
   64          | PROCESSOR expression NEWLINE RIND process ROUTD

   65 placedpar_vlist: placedpar
   66                | placedpar_vlist placedpar

   67 procedure_body: process

   68 process: SKIP NEWLINE
   69        | STOP NEWLINE
   70        | action
   71        | construction
   72        | instance
   73        | case_input
   74        | specification process
   75        | allocation process

   76 process_vlist: process
   77              | process_vlist process

   78 selection: CASE selector NEWLINE RIND option_vlist ROUTD
   79          | CASE selector NEWLINE

   80 sequence: SEQ NEWLINE RIND process_vlist ROUTD
   81         | SEQ NEWLINE
   82         | SEQ replicator NEWLINE RIND process ROUTD

   83 specification: declaration
   84              | abbreviation
   85              | definition

   86 valof: VALOF NEWLINE RIND process RESULT expression_list NEWLINE ROUTD
   87      | specification valof

   88 value_process: valof

   89 variant: tagged_list NEWLINE RIND process ROUTD
   90        | specification variant

   91 variant_vlist: variant
   92              | variant_vlist variant

   93 abbreviation: specifier name IS element ':' NEWLINE
   94             | name IS element ':' NEWLINE
   95             | VAL specifier name IS expression ':' NEWLINE
   96             | VAL name IS expression ':' NEWLINE

   97 action: assignment NEWLINE
   98       | input NEWLINE
   99       | output NEWLINE

  100 allocation: PLACE name AT expression ':' NEWLINE

  101 declaration: type name_clist ':' NEWLINE

  102 guard: input NEWLINE
  103      | boolean '&' input NEWLINE
  104      | boolean '&' SKIP NEWLINE

  105 instance: name '(' actual_olist ')' NEWLINE

  106 tagged_protocol: scalar NEWLINE
  107                | scalar ';' sequential_protocol NEWLINE

  108 tagged_protocol_vlist: tagged_protocol
  109                      | tagged_protocol_vlist tagged_protocol

  110 actual: element
  111       | expression

  112 actual_clist: actual
  113             | actual_clist ',' actual

  114 actual_olist: /* empty */
  115             | actual_clist

  116 assignment: variable_clist ASSIGN expression_list

  117 base: expression

  118 boolean: expression

  119 case_expression: expression

  120 case_expression_clist: case_expression
  121                      | case_expression_clist ',' case_expression

  122 channel: element

  123 delayed_input: channel '?' AFTER expression

  124 expression_list: name '(' expression_olist ')'
  125                | expression_clist

  126 formal: specifier name_clist
  127       | VAL specifier name_clist

  128 formal_clist: formal
  129             | formal_clist ',' formal

  130 formal_olist: /* empty */
  131             | formal_clist

  132 indef_type: INDEF_SPEC type
  133           | INDEF_SPEC indef_type
  134           | '[' expression ']' indef_type

  135 input: channel '?' input_item_slist
  136      | channel '?' CASE tagged_list
  137      | delayed_input

  138 input_item: variable
  139           | variable DOUBLE_COLON variable

  140 input_item_slist: input_item
  141                 | input_item_slist ';' input_item

  142 output: channel '!' output_item_slist
  143       | channel '!' scalar ';' output_item_slist

  144 output_item: expression
  145            | expression DOUBLE_COLON expression

  146 output_item_slist: output_item
  147                  | output_item_slist ';' output_item

  148 replicator: name '=' base FOR count

  149 selector: expression

  150 sequential_protocol: simple_protocol_slist

  151 simple_protocol_slist: simple_protocol
  152                      | simple_protocol_slist ';' simple_protocol

  153 specifier: type
  154          | indef_type

  155 tagged_list: scalar
  156            | scalar ';' input_item_slist

  157 variable: element

  158 variable_clist: variable
  159               | variable_clist ',' variable

  160 andor_expression: andor_expression andor_operator operand
  161                 | operand andor_operator operand

  162 array_type: '[' expression ']' type

  163 comms_type: CHAN OF protocol
  164           | TIMER
  165           | PORT OF type

  166 conversion: primitive_type operand
  167           | primitive_type ROUND operand
  168           | primitive_type TRUNC operand

  169 count: expression

  170 element: element '[' subscript ']'
  171        | '[' element FROM subscript FOR subscript ']'
  172        | scalar

  173 expression: monadic_operator operand
  174           | operand dyadic_operator operand
  175           | andor_expression
  176           | conversion
  177           | operand
  178           | MOSTPOS data_type
  179           | MOSTNEG data_type

  180 expression_clist: expression
  181                 | expression_clist ',' expression

  182 expression_olist: /* empty */
  183                 | expression_clist

  184 operand: element
  185        | literal
  186        | table
  187        | '(' expression ')'
  188        | name '(' expression_olist ')'

  189 primitive_type: comms_type
  190               | data_type

  191 protocol: name
  192         | simple_protocol
  193         | ANY

  194 simple_protocol: type
  195                | counting_type DOUBLE_COLON INDEF_SPEC type

  196 subscript: expression

  197 table: table '[' subscript ']'
  198      | '[' expression_clist ']'
  199      | '[' table FROM subscript FOR count ']'

  200 type: primitive_type
  201     | array_type

  202 andor_operator: AND
  203               | OR

  204 byte: BYTE_CONSTANT

  205 counting_type: BYTE
  206              | INT
  207              | INT16
  208              | INT32
  209              | INT64

  210 data_type: counting_type
  211          | BOOL
  212          | REAL32
  213          | REAL64

  214 data_type_clist: data_type
  215                | data_type_clist ',' data_type

  216 dyadic_operator: AFTER
  217                | BITAND
  218                | BITOR
  219                | MINUS
  220                | PLUS
  221                | REM
  222                | TIMES
  223                | RIGHT_OP
  224                | LEFT_OP
  225                | AND_OP
  226                | OR_OP
  227                | LE_OP
  228                | GE_OP
  229                | XOR_OP
  230                | NE_OP
  231                | '-'
  232                | '+'
  233                | '*'
  234                | '/'
  235                | '\\'
  236                | '<'
  237                | '>'

  238 integer: INT_CONSTANT
  239        | HEX_CONSTANT

  240 literal: integer
  241        | byte
  242        | integer '(' data_type ')'
  243        | byte '(' data_type ')'
  244        | real '(' data_type ')'
  245        | string
  246        | TRUE
  247        | FALSE

  248 monadic_operator: BITNOT
  249                 | MINUS
  250                 | NOT
  251                 | SIZE
  252                 | '~'
  253                 | '-'

  254 name: IDENTIFIER

  255 name_clist: name
  256           | name_clist ',' name

  257 real: REAL_CONSTANT

  258 scalar: name

  259 string: STRING_LITERAL
  260       | string_head STRING_LITERAL_END

  261 string_head: STRING_LITERAL_START
  262            | string_head STRING_LITERAL_MIDDLE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 142 143
'&' (38) 15 16 103 104
'(' (40) 19 20 40 41 105 124 187 188 242 243 244
')' (41) 19 20 40 41 105 124 187 188 242 243 244
'*' (42) 233
'+' (43) 232
',' (44) 113 121 129 159 181 215 256
'-' (45) 231 253
'/' (47) 234
':' (58) 19 20 37 38 39 40 41 42 43 93 94 95 96 100 101
';' (59) 107 141 143 147 152 156
'<' (60) 236
'=' (61) 148
'>' (62) 237
'?' (63) 13 14 15 16 21 22 123 135 136
'[' (91) 134 162 170 171 197 198 199
'\\' (92) 235
']' (93) 134 162 170 171 197 198 199
'~' (126) 252
error (256)
AFTER (258) 123 216
ALT (259) 4 5 6 7 8 9
AND (260) 202
AND_OP (261) 225
ANY (262) 40 193
ASSIGN (263) 116
AT (264) 100
BITAND (265) 217
BITNOT (266) 248
BITOR (267) 218
BOOL (268) 211
BYTE (269) 205
BYTE_CONSTANT (270) 204
CASE (271) 13 14 15 16 21 22 38 39 78 79 136
CHAN (272) 163
DOUBLE_COLON (273) 139 145 195
ELSE (274) 50
FALSE (275) 247
FOR (276) 148 171 199
FROM (277) 171 199
FUNCTION (278) 20 40 41
GE_OP (279) 228
HEX_CONSTANT (280) 239
IDENTIFIER (281) 254
IF (282) 28 29 30
INDEF_SPEC (283) 132 133 195
INT (284) 206
INT16 (285) 207
INT32 (286) 208
INT64 (287) 209
INT_CONSTANT (288) 238
IS (289) 37 41 93 94 95 96
LEFT_OP (290) 224
LE_OP (291) 227
MINUS (292) 219 249
MOSTNEG (293) 179
MOSTPOS (294) 178
NEWLINE (295) 4 5 6 7 8 9 13 14 15 16 19 20 21 22 28 29 30 37 38 39
    40 41 42 43 47 48 49 50 54 55 56 57 58 59 61 62 63 64 68 69 78
    79 80 81 82 86 89 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107
NE_OP (296) 230
NOT (297) 250
OF (298) 163 165
OR (299) 203
OR_OP (300) 226
PAR (301) 54 55 56 57 58 59 61 62 63
PLACE (302) 100
PLACED (303) 61 62 63
PLUS (304) 220
PORT (305) 165
PRI (306) 7 8 9 57 58 59
PROC (307) 19
PROCESSOR (308) 64
PROTOCOL (309) 37 38 39
REAL32 (310) 212
REAL64 (311) 213
REAL_CONSTANT (312) 257
REM (313) 221
RESULT (314) 86
RETYPES (315) 42 43
RIGHT_OP (316) 223
RIND (317) 4 6 7 9 13 15 19 20 21 28 30 38 39 40 46 47 48 49 50 54
    56 57 59 61 63 64 78 80 82 86 89
ROUND (318) 167
ROUTD (319) 4 6 7 9 13 15 19 20 21 28 30 38 39 40 46 47 48 49 50 54
    56 57 59 61 63 64 78 80 82 86 89
SEQ (320) 80 81 82
SIZE (321) 251
SKIP (322) 68 104
STOP (323) 69
STRING_LITERAL (324) 259
STRING_LITERAL_END (325) 260
STRING_LITERAL_MIDDLE (326) 262
STRING_LITERAL_START (327) 261
TIMER (328) 164
TIMES (329) 222
TRUE (330) 246
TRUNC (331) 168
VAL (332) 43 95 96 127
VALOF (333) 86
WHILE (334) 48
XOR_OP (335) 229


Nonterminals, with rules where they appear

$accept (100)
    on left: 0
program (101)
    on left: 1, on right: 0
block_definition_list (102)
    on left: 2 3, on right: 1 3
alternation (103)
    on left: 4 5 6 7 8 9, on right: 11 36
alternative (104)
    on left: 10 11 12 13 14 15 16, on right: 6 9 12 17 18
alternative_vlist (105)
    on left: 17 18, on right: 4 7 18
block_definition (106)
    on left: 19 20, on right: 2 3 44
case_input (107)
    on left: 21 22, on right: 73
choice (108)
    on left: 23 24 25, on right: 25 26 27 30
choice_vlist (109)
    on left: 26 27, on right: 27 28
conditional (110)
    on left: 28 29 30, on right: 24 32
construction (111)
    on left: 31 32 33 34 35 36, on right: 71
definition (112)
    on left: 37 38 39 40 41 42 43 44, on right: 85
function_body (113)
    on left: 45, on right: 20 40
guarded_alternative (114)
    on left: 46, on right: 10
guarded_choice (115)
    on left: 47, on right: 23
loop (116)
    on left: 48, on right: 34
option (117)
    on left: 49 50 51, on right: 51 52 53
option_vlist (118)
    on left: 52 53, on right: 53 78
parallel (119)
    on left: 54 55 56 57 58 59 60, on right: 35
placedpar (120)
    on left: 61 62 63 64, on right: 60 63 65 66
placedpar_vlist (121)
    on left: 65 66, on right: 61 66
procedure_body (122)
    on left: 67, on right: 19
process (123)
    on left: 68 69 70 71 72 73 74 75, on right: 46 47 48 49 50 56 59
    64 67 74 75 76 77 82 86 89
process_vlist (124)
    on left: 76 77, on right: 54 57 77 80
selection (125)
    on left: 78 79, on right: 33
sequence (126)
    on left: 80 81 82, on right: 31
specification (127)
    on left: 83 84 85, on right: 12 25 51 74 87 90
valof (128)
    on left: 86 87, on right: 87 88
value_process (129)
    on left: 88, on right: 45
variant (130)
    on left: 89 90, on right: 90 91 92
variant_vlist (131)
    on left: 91 92, on right: 13 15 21 92
abbreviation (132)
    on left: 93 94 95 96, on right: 84
action (133)
    on left: 97 98 99, on right: 70
allocation (134)
    on left: 100, on right: 75
declaration (135)
    on left: 101, on right: 83
guard (136)
    on left: 102 103 104, on right: 46
instance (137)
    on left: 105, on right: 72
tagged_protocol (138)
    on left: 106 107, on right: 108 109
tagged_protocol_vlist (139)
    on left: 108 109, on right: 38 109
actual (140)
    on left: 110 111, on right: 112 113
actual_clist (141)
    on left: 112 113, on right: 113 115
actual_olist (142)
    on left: 114 115, on right: 105
assignment (143)
    on left: 116, on right: 97
base (144)
    on left: 117, on right: 148
boolean (145)
    on left: 118, on right: 15 16 47 48 103 104
case_expression (146)
    on left: 119, on right: 120 121
case_expression_clist (147)
    on left: 120 121, on right: 49 121
channel (148)
    on left: 122, on right: 13 14 15 16 21 22 123 135 136 142 143
delayed_input (149)
    on left: 123, on right: 137
expression_list (150)
    on left: 124 125, on right: 41 86 116
formal (151)
    on left: 126 127, on right: 128 129
formal_clist (152)
    on left: 128 129, on right: 129 131
formal_olist (153)
    on left: 130 131, on right: 19 20 41
indef_type (154)
    on left: 132 133 134, on right: 133 134 154
input (155)
    on left: 135 136 137, on right: 98 102 103
input_item (156)
    on left: 138 139, on right: 140 141
input_item_slist (157)
    on left: 140 141, on right: 135 141 156
output (158)
    on left: 142 143, on right: 99
output_item (159)
    on left: 144 145, on right: 146 147
output_item_slist (160)
    on left: 146 147, on right: 142 143 147
replicator (161)
    on left: 148, on right: 6 9 30 56 59 63 82
selector (162)
    on left: 149, on right: 78 79
sequential_protocol (163)
    on left: 150, on right: 37 107
simple_protocol_slist (164)
    on left: 151 152, on right: 150 152
specifier (165)
    on left: 153 154, on right: 42 43 93 95 126 127
tagged_list (166)
    on left: 155 156, on right: 89 136
variable (167)
    on left: 157, on right: 138 139 158 159
variable_clist (168)
    on left: 158 159, on right: 116 159
andor_expression (169)
    on left: 160 161, on right: 160 175
array_type (170)
    on left: 162, on right: 201
comms_type (171)
    on left: 163 164 165, on right: 189
conversion (172)
    on left: 166 167 168, on right: 176
count (173)
    on left: 169, on right: 148 199
element (174)
    on left: 170 171 172, on right: 42 93 94 110 122 157 170 171 184
expression (175)
    on left: 173 174 175 176 177 178 179, on right: 43 64 95 96 100
    111 117 118 119 123 134 144 145 149 162 169 180 181 187 196
expression_clist (176)
    on left: 180 181, on right: 125 181 183 198
expression_olist (177)
    on left: 182 183, on right: 124 188
operand (178)
    on left: 184 185 186 187 188, on right: 160 161 166 167 168 173
    174 177
primitive_type (179)
    on left: 189 190, on right: 166 167 168 200
protocol (180)
    on left: 191 192 193, on right: 163
simple_protocol (181)
    on left: 194 195, on right: 151 152 192
subscript (182)
    on left: 196, on right: 170 171 197 199
table (183)
    on left: 197 198 199, on right: 186 197 199
type (184)
    on left: 200 201, on right: 101 132 153 162 165 194 195
andor_operator (185)
    on left: 202 203, on right: 160 161
byte (186)
    on left: 204, on right: 241 243
counting_type (187)
    on left: 205 206 207 208 209, on right: 195 210
data_type (188)
    on left: 210 211 212 213, on right: 178 179 190 214 215 242 243
    244
data_type_clist (189)
    on left: 214 215, on right: 20 41 215
dyadic_operator (190)
    on left: 216 217 218 219 220 221 222 223 224 225 226 227 228 229
    230 231 232 233 234 235 236 237, on right: 174
integer (191)
    on left: 238 239, on right: 240 242
literal (192)
    on left: 240 241 242 243 244 245 246 247, on right: 185
monadic_operator (193)
    on left: 248 249 250 251 252 253, on right: 173
name (194)
    on left: 254, on right: 19 20 37 38 39 40 41 42 43 93 94 95 96
    100 105 124 148 188 191 255 256 258
name_clist (195)
    on left: 255 256, on right: 101 126 127 256
real (196)
    on left: 257, on right: 244
scalar (197)
    on left: 258, on right: 106 107 143 155 156 172
string (198)
    on left: 259 260, on right: 245
string_head (199)
    on left: 261 262, on right: 260 262


state 0

    0 $accept: . program $end

    BOOL    shift, and go to state 1
    BYTE    shift, and go to state 2
    INT     shift, and go to state 3
    INT16   shift, and go to state 4
    INT32   shift, and go to state 5
    INT64   shift, and go to state 6
    PROC    shift, and go to state 7
    REAL32  shift, and go to state 8
    REAL64  shift, and go to state 9

    program                go to state 10
    block_definition_list  go to state 11
    block_definition       go to state 12
    counting_type          go to state 13
    data_type              go to state 14
    data_type_clist        go to state 15


state 1

  211 data_type: BOOL .

    $default  reduce using rule 211 (data_type)


state 2

  205 counting_type: BYTE .

    $default  reduce using rule 205 (counting_type)


state 3

  206 counting_type: INT .

    $default  reduce using rule 206 (counting_type)


state 4

  207 counting_type: INT16 .

    $default  reduce using rule 207 (counting_type)


state 5

  208 counting_type: INT32 .

    $default  reduce using rule 208 (counting_type)


state 6

  209 counting_type: INT64 .

    $default  reduce using rule 209 (counting_type)


state 7

   19 block_definition: PROC . name '(' formal_olist ')' NEWLINE RIND procedure_body ROUTD ':' NEWLINE

    IDENTIFIER  shift, and go to state 16

    name  go to state 17


state 8

  212 data_type: REAL32 .

    $default  reduce using rule 212 (data_type)


state 9

  213 data_type: REAL64 .

    $default  reduce using rule 213 (data_type)


state 10

    0 $accept: program . $end

    $end  shift, and go to state 18


state 11

    1 program: block_definition_list .
    3 block_definition_list: block_definition_list . block_definition

    BOOL    shift, and go to state 1
    BYTE    shift, and go to state 2
    INT     shift, and go to state 3
    INT16   shift, and go to state 4
    INT32   shift, and go to state 5
    INT64   shift, and go to state 6
    PROC    shift, and go to state 7
    REAL32  shift, and go to state 8
    REAL64  shift, and go to state 9

    $default  reduce using rule 1 (program)

    block_definition  go to state 19
    counting_type     go to state 13
    data_type         go to state 14
    data_type_clist   go to state 15


state 12

    2 block_definition_list: block_definition .

    $default  reduce using rule 2 (block_definition_list)


state 13

  210 data_type: counting_type .

    $default  reduce using rule 210 (data_type)


state 14

  214 data_type_clist: data_type .

    $default  reduce using rule 214 (data_type_clist)


state 15

   20 block_definition: data_type_clist . FUNCTION name '(' formal_olist ')' NEWLINE RIND function_body ROUTD ':' NEWLINE
  215 data_type_clist: data_type_clist . ',' data_type

    ','       shift, and go to state 20
    FUNCTION  shift, and go to state 21


state 16

  254 name: IDENTIFIER .

    $default  reduce using rule 254 (name)


state 17

   19 block_definition: PROC name . '(' formal_olist ')' NEWLINE RIND procedure_body ROUTD ':' NEWLINE

    '('  shift, and go to state 22


state 18

    0 $accept: program $end .

    $default  accept


state 19

    3 block_definition_list: block_definition_list block_definition .

    $default  reduce using rule 3 (block_definition_list)


state 20

  215 data_type_clist: data_type_clist ',' . data_type

    BOOL    shift, and go to state 1
    BYTE    shift, and go to state 2
    INT     shift, and go to state 3
    INT16   shift, and go to state 4
    INT32   shift, and go to state 5
    INT64   shift, and go to state 6
    REAL32  shift, and go to state 8
    REAL64  shift, and go to state 9

    counting_type  go to state 13
    data_type      go to state 23


state 21

   20 block_definition: data_type_clist FUNCTION . name '(' formal_olist ')' NEWLINE RIND function_body ROUTD ':' NEWLINE

    IDENTIFIER  shift, and go to state 16

    name  go to state 24


state 22

   19 block_definition: PROC name '(' . formal_olist ')' NEWLINE RIND procedure_body ROUTD ':' NEWLINE

    '['         shift, and go to state 25
    BOOL        shift, and go to state 1
    BYTE        shift, and go to state 2
    CHAN        shift, and go to state 26
    INDEF_SPEC  shift, and go to state 27
    INT         shift, and go to state 3
    INT16       shift, and go to state 4
    INT32       shift, and go to state 5
    INT64       shift, and go to state 6
    PORT        shift, and go to state 28
    REAL32      shift, and go to state 8
    REAL64      shift, and go to state 9
    TIMER       shift, and go to state 29
    VAL         shift, and go to state 30

    $default  reduce using rule 130 (formal_olist)

    formal          go to state 31
    formal_clist    go to state 32
    formal_olist    go to state 33
    indef_type      go to state 34
    specifier       go to state 35
    array_type      go to state 36
    comms_type      go to state 37
    primitive_type  go to state 38
    type            go to state 39
    counting_type   go to state 13
    data_type       go to state 40


state 23

  215 data_type_clist: data_type_clist ',' data_type .

    $default  reduce using rule 215 (data_type_clist)


state 24

   20 block_definition: data_type_clist FUNCTION name . '(' formal_olist ')' NEWLINE RIND function_body ROUTD ':' NEWLINE

    '('  shift, and go to state 41


state 25

  134 indef_type: '[' . expression ']' indef_type
  162 array_type: '[' . expression ']' type

    '('                   shift, and go to state 42
    '-'                   shift, and go to state 43
    '['                   shift, and go to state 44
    '~'                   shift, and go to state 45
    BITNOT                shift, and go to state 46
    BOOL                  shift, and go to state 1
    BYTE                  shift, and go to state 2
    BYTE_CONSTANT         shift, and go to state 47
    CHAN                  shift, and go to state 26
    FALSE                 shift, and go to state 48
    HEX_CONSTANT          shift, and go to state 49
    IDENTIFIER            shift, and go to state 16
    INT                   shift, and go to state 3
    INT16                 shift, and go to state 4
    INT32                 shift, and go to state 5
    INT64                 shift, and go to state 6
    INT_CONSTANT          shift, and go to state 50
    MINUS                 shift, and go to state 51
    MOSTNEG               shift, and go to state 52
    MOSTPOS               shift, and go to state 53
    NOT                   shift, and go to state 54
    PORT                  shift, and go to state 28
    REAL32                shift, and go to state 8
    REAL64                shift, and go to state 9
    REAL_CONSTANT         shift, and go to state 55
    SIZE                  shift, and go to state 56
    STRING_LITERAL        shift, and go to state 57
    STRING_LITERAL_START  shift, and go to state 58
    TIMER                 shift, and go to state 29
    TRUE                  shift, and go to state 59

    andor_expression  go to state 60
    comms_type        go to state 37
    conversion        go to state 61
    element           go to state 62
    expression        go to state 63
    operand           go to state 64
    primitive_type    go to state 65
    table             go to state 66
    byte              go to state 67
    counting_type     go to state 13
    data_type         go to state 40
    integer           go to state 68
    literal           go to state 69
    monadic_operator  go to state 70
    name              go to state 71
    real              go to state 72
    scalar            go to state 73
    string            go to state 74
    string_head       go to state 75


state 26

  163 comms_type: CHAN . OF protocol

    OF  shift, and go to state 76


state 27

  132 indef_type: INDEF_SPEC . type
  133           | INDEF_SPEC . indef_type

    '['         shift, and go to state 25
    BOOL        shift, and go to state 1
    BYTE        shift, and go to state 2
    CHAN        shift, and go to state 26
    INDEF_SPEC  shift, and go to state 27
    INT         shift, and go to state 3
    INT16       shift, and go to state 4
    INT32       shift, and go to state 5
    INT64       shift, and go to state 6
    PORT        shift, and go to state 28
    REAL32      shift, and go to state 8
    REAL64      shift, and go to state 9
    TIMER       shift, and go to state 29

    indef_type      go to state 77
    array_type      go to state 36
    comms_type      go to state 37
    primitive_type  go to state 38
    type            go to state 78
    counting_type   go to state 13
    data_type       go to state 40


state 28

  165 comms_type: PORT . OF type

    OF  shift, and go to state 79


state 29

  164 comms_type: TIMER .

    $default  reduce using rule 164 (comms_type)


state 30

  127 formal: VAL . specifier name_clist

    '['         shift, and go to state 25
    BOOL        shift, and go to state 1
    BYTE        shift, and go to state 2
    CHAN        shift, and go to state 26
    INDEF_SPEC  shift, and go to state 27
    INT         shift, and go to state 3
    INT16       shift, and go to state 4
    INT32       shift, and go to state 5
    INT64       shift, and go to state 6
    PORT        shift, and go to state 28
    REAL32      shift, and go to state 8
    REAL64      shift, and go to state 9
    TIMER       shift, and go to state 29

    indef_type      go to state 34
    specifier       go to state 80
    array_type      go to state 36
    comms_type      go to state 37
    primitive_type  go to state 38
    type            go to state 39
    counting_type   go to state 13
    data_type       go to state 40


state 31

  128 formal_clist: formal .

    $default  reduce using rule 128 (formal_clist)


state 32

  129 formal_clist: formal_clist . ',' formal
  131 formal_olist: formal_clist .

    ','  shift, and go to state 81

    $default  reduce using rule 131 (formal_olist)


state 33

   19 block_definition: PROC name '(' formal_olist . ')' NEWLINE RIND procedure_body ROUTD ':' NEWLINE

    ')'  shift, and go to state 82


state 34

  154 specifier: indef_type .

    $default  reduce using rule 154 (specifier)


state 35

  126 formal: specifier . name_clist

    IDENTIFIER  shift, and go to state 16

    name        go to state 83
    name_clist  go to state 84


state 36

  201 type: array_type .

    $default  reduce using rule 201 (type)


state 37

  189 primitive_type: comms_type .

    $default  reduce using rule 189 (primitive_type)


state 38

  200 type: primitive_type .

    $default  reduce using rule 200 (type)


state 39

  153 specifier: type .

    $default  reduce using rule 153 (specifier)


state 40

  190 primitive_type: data_type .

    $default  reduce using rule 190 (primitive_type)


state 41

   20 block_definition: data_type_clist FUNCTION name '(' . formal_olist ')' NEWLINE RIND function_body ROUTD ':' NEWLINE

    '['         shift, and go to state 25
    BOOL        shift, and go to state 1
    BYTE        shift, and go to state 2
    CHAN        shift, and go to state 26
    INDEF_SPEC  shift, and go to state 27
    INT         shift, and go to state 3
    INT16       shift, and go to state 4
    INT32       shift, and go to state 5
    INT64       shift, and go to state 6
    PORT        shift, and go to state 28
    REAL32      shift, and go to state 8
    REAL64      shift, and go to state 9
    TIMER       shift, and go to state 29
    VAL         shift, and go to state 30

    $default  reduce using rule 130 (formal_olist)

    formal          go to state 31
    formal_clist    go to state 32
    formal_olist    go to state 85
    indef_type      go to state 34
    specifier       go to state 35
    array_type      go to state 36
    comms_type      go to state 37
    primitive_type  go to state 38
    type            go to state 39
    counting_type   go to state 13
    data_type       go to state 40


state 42

  187 operand: '(' . expression ')'

    '('                   shift, and go to state 42
    '-'                   shift, and go to state 43
    '['                   shift, and go to state 44
    '~'                   shift, and go to state 45
    BITNOT                shift, and go to state 46
    BOOL                  shift, and go to state 1
    BYTE                  shift, and go to state 2
    BYTE_CONSTANT         shift, and go to state 47
    CHAN                  shift, and go to state 26
    FALSE                 shift, and go to state 48
    HEX_CONSTANT          shift, and go to state 49
    IDENTIFIER            shift, and go to state 16
    INT                   shift, and go to state 3
    INT16                 shift, and go to state 4
    INT32                 shift, and go to state 5
    INT64                 shift, and go to state 6
    INT_CONSTANT          shift, and go to state 50
    MINUS                 shift, and go to state 51
    MOSTNEG               shift, and go to state 52
    MOSTPOS               shift, and go to state 53
    NOT                   shift, and go to state 54
    PORT                  shift, and go to state 28
    REAL32                shift, and go to state 8
    REAL64                shift, and go to state 9
    REAL_CONSTANT         shift, and go to state 55
    SIZE                  shift, and go to state 56
    STRING_LITERAL        shift, and go to state 57
    STRING_LITERAL_START  shift, and go to state 58
    TIMER                 shift, and go to state 29
    TRUE                  shift, and go to state 59

    andor_expression  go to state 60
    comms_type        go to state 37
    conversion        go to state 61
    element           go to state 62
    expression        go to state 86
    operand           go to state 64
    primitive_type    go to state 65
    table             go to state 66
    byte              go to state 67
    counting_type     go to state 13
    data_type         go to state 40
    integer           go to state 68
    literal           go to state 69
    monadic_operator  go to state 70
    name              go to state 71
    real              go to state 72
    scalar            go to state 73
    string            go to state 74
    string_head       go to state 75


state 43

  253 monadic_operator: '-' .

    $default  reduce using rule 253 (monadic_operator)


state 44

  171 element: '[' . element FROM subscript FOR subscript ']'
  198 table: '[' . expression_clist ']'
  199      | '[' . table FROM subscript FOR count ']'

    '('                   shift, and go to state 42
    '-'                   shift, and go to state 43
    '['                   shift, and go to state 44
    '~'                   shift, and go to state 45
    BITNOT                shift, and go to state 46
    BOOL                  shift, and go to state 1
    BYTE                  shift, and go to state 2
    BYTE_CONSTANT         shift, and go to state 47
    CHAN                  shift, and go to state 26
    FALSE                 shift, and go to state 48
    HEX_CONSTANT          shift, and go to state 49
    IDENTIFIER            shift, and go to state 16
    INT                   shift, and go to state 3
    INT16                 shift, and go to state 4
    INT32                 shift, and go to state 5
    INT64                 shift, and go to state 6
    INT_CONSTANT          shift, and go to state 50
    MINUS                 shift, and go to state 51
    MOSTNEG               shift, and go to state 52
    MOSTPOS               shift, and go to state 53
    NOT                   shift, and go to state 54
    PORT                  shift, and go to state 28
    REAL32                shift, and go to state 8
    REAL64                shift, and go to state 9
    REAL_CONSTANT         shift, and go to state 55
    SIZE                  shift, and go to state 56
    STRING_LITERAL        shift, and go to state 57
    STRING_LITERAL_START  shift, and go to state 58
    TIMER                 shift, and go to state 29
    TRUE                  shift, and go to state 59

    andor_expression  go to state 60
    comms_type        go to state 37
    conversion        go to state 61
    element           go to state 87
    expression        go to state 88
    expression_clist  go to state 89
    operand           go to state 64
    primitive_type    go to state 65
    table             go to state 90
    byte              go to state 67
    counting_type     go to state 13
    data_type         go to state 40
    integer           go to state 68
    literal           go to state 69
    monadic_operator  go to state 70
    name              go to state 71
    real              go to state 72
    scalar            go to state 73
    string            go to state 74
    string_head       go to state 75


state 45
